[package]
name = "randy"
version = "0.1.0"
edition = "2021"
description = "A quick and AI-powered game to guess numbers and get answered by a cowboy."
repository = "https://github.com/dybucc/randy"
license-file = "UNLICENSE"
keywords = [ "game", "cli", "cowboy", "ai", "random" ]
categories = [ "command-line-utilities", "games" ]

[lints.rust]
absolute_paths_not_starting_with_crate = "deny"
ambiguous_negative_literals = "deny"
deprecated_safe = "deny"
macro_use_extern_crate = "deny"
missing_docs = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
rust_2024_incompatible_pat = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unnameable_types = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_results = "deny"

[lints.clippy]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arbitrary_source_item_ordering = "deny"
as_underscore = "deny"
assigning_clones = "deny"
bool_to_int_with_if = "deny"
branches_sharing_code = "deny"
cargo_common_metadata = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cfg_not_test = "deny"
checked_conversions = "deny"
clear_with_drain = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
cognitive_complexity = "deny"
collection_is_never_read = "deny"
comparison_chain = "deny"
debug_assert_with_mut_call = "deny"
default_trait_access = "deny"
derive_partial_eq_without_eq = "deny"
disallowed_script_idents = "deny"
doc_link_with_quotes = "deny"
empty_enum = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
equatable_if_let = "deny"
error_impl_error = "deny"
exit = "deny"
expl_impl_clone_on_copy = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
fallible_impl_from = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
fn_params_excessive_bools = "deny"
format_collect = "deny"
format_push_string = "deny"
get_unwrap = "deny"
if_not_else = "deny"
if_then_some_else_none = "deny"
ignored_unit_patterns = "deny"
impl_trait_in_params = "deny"
implicit_clone = "deny"
imprecise_flops = "deny"
indexing_slicing = "deny"
inefficient_to_string = "deny"
into_iter_without_iter = "deny"
invalid_upcast_comparisons = "deny"
items_after_statements = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_not_returning_iterator = "deny"
iter_over_hash_type = "deny"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.38", features = ["derive", "env", "wrap_help"] }
console = "0.15.11"
dialoguer = "0.11.0"
fastrand = "2.3.0"
indicatif = "0.17.11"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
ureq = { version = "3.0.11", features = ["json", "platform-verifier"] }
